# RAG_AGENTIC_AI

./: RAGV2.ipynb  README.md  pyproject.toml  rag.py
store/b0f716e7-70bd-4dbb-a611-25c0dc419879/: index_metadata.pickle
