[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-llama>=0.1.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.11.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
